[gd_scene load_steps=3 format=3 uid="uid://bimpgyv2w5ouk"]

[ext_resource type="Script" uid="uid://q3yt7x61p32x" path="res://Cases/Binary_Trap/Scripts/gap_game.gd" id="1_o3drf"]
[ext_resource type="PackedScene" uid="uid://b10xds6ce20ej" path="res://Cases/Binary_Trap/Scenes/Minigames/gap.tscn" id="2_sii17"]

[node name="Gap Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o3drf")

[node name="Result Label" type="Label" parent="."]
layout_mode = 2
offset_left = 440.0
offset_top = 7.0
offset_right = 467.0
offset_bottom = 41.0
theme_override_font_sizes/font_size = 24
text = "13"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 110

[node name="Gap1" parent="HBoxContainer" instance=ExtResource("2_sii17")]
layout_mode = 2

[node name="Gap2" parent="HBoxContainer" instance=ExtResource("2_sii17")]
layout_mode = 2

[node name="Gap3" parent="HBoxContainer" instance=ExtResource("2_sii17")]
layout_mode = 2

[node name="Gap4" parent="HBoxContainer" instance=ExtResource("2_sii17")]
layout_mode = 2
